# renpy_patcher

./: Cargo.toml
assets/: monkey_patch_loader.py  monkey_patch_script.py
src/: bindings.rs  lib.rs  py_utils.rs
